--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     margin-top: 80px;
     font-family: 'Times New Roman', Times, serif;
     font-size: larger;
+    text-align: center;
 
 }
 
@@ -42,6 +43,7 @@ h1 {
 .video-container {
     margin-top: -50px;
     text-align: center;
+    /* max-width: 0%; */
     
 }
 
@@ -132,4 +134,5 @@ a:hover{
     flex-grow: 1;
     max-width: 100%;
     margin-left: 50px;
+    text-align: center;
 }
